[project]
name = "deadbolt"
version = "0.1.0"
description = "Lean professional pentest orchestrator"
requires-python = ">=3.10"

dependencies = [
  "typer",
  "rich",
  "pydantic",
  "PyYAML",
  "Jinja2",
  "requests"
]

[project.scripts]
deadbolt = "main.cli.app:app"


[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
packages = ["main"]